Allow polarizing SFS to ancestral states

--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -18,6 +18,8 @@ reference:
   exclude: []
   min_size: 3000
 
+ancestral: "data/ref/testref.fa"
+
 #===================== Sample Set Configuration =======================#
 
 exclude_ind: []
