--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -116,8 +116,7 @@ params:
     filt-on-depth-classes: true
   fastp:
     extra: "-p -g" # don't put --merge or --overlap_len_require here, they're implicit
-    min_overlap_mod: 30
-    min_overlap_hist: 15
+    min_overlap_hist: 20
   bwa_aln:
     extra: "-l 16500 -n 0.01 -o 2"
   picard:
@@ -128,6 +127,8 @@ params:
     extra: ""
     extra_saf: ""
     extra_beagle: ""
+    domajorminor: 1 # Currently only compatible with values 1, 2, 4, 5
+    domaf: 1
     snp_pval: "1e-6"
     min_maf: 0.05
     mindepthind_heterozygosity: 3
@@ -141,7 +142,7 @@ params:
     fit_LDdecay_n_correction: true
     pruning_min-weight: 0.1
   realsfs:
-    fold: 1 # Should only be set to 1 for now
+    fold: 1 # Should only be set to 1, unless ancestral reference is given above
     sfsboot: 100
   fst:
     whichFst: 1
