Improve pruning options for ngsF-HMM
Also updates plotting to give more informative plots, allows for running ngsF-HMM per population or for the whole dataset together, and enabling or disabling pruning.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -203,7 +203,7 @@ if config["analyses"]["heterozygosity_angsd"]:
 
 if config["analyses"]["inbreeding_ngsf-hmm"]:
     all_outputs.append(
-        "results/datasets/{dataset}/plots/inbreeding/{dataset}.{ref}_all_{sites}-filts.froh.pdf"
+        "results/datasets/{dataset}/plots/inbreeding/{dataset}.{ref}_all_{sites}-filts.ind_froh.tsv"
     )
 
 if config["analyses"]["admix_ngsadmix"]:
