--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -134,16 +134,23 @@ params:
     mindepthind_heterozygosity: 3
   ngsld:
     max_kb_dist_est-ld: 200
-    max_kb_dist_decay: 100
-    max_kb_dist_pruning: 50
     rnd_sample_est-ld: 0.001
+    max_kb_dist_decay: 100
     rnd_sample_decay: 0.9
     fit_LDdecay_extra: "--fit_level 3"
     fit_LDdecay_n_correction: true
-    pruning_min-weight: 0.1
+    max_kb_dist_pruning_dataset: 50 # used for PCA, Admix, NGSrelate, not ngsF-HMM
+    pruning_min-weight_dataset: 0.1 # used for PCA, Admix, NGSrelate, not ngsF-HMM
+  ngsf-hmm:
+    estimate_in_pops: false
+    prune: false
+    max_kb_dist_pruning_pop: 50 # used only for ngsf-hmm
+    pruning_min-weight_pop: 0.8 # used only for ngsf-hmm
+    min_roh_length: 50000
+    roh_bins: [ 100000, 250000, 500000, 1000000, 2500000, 5000000 ] # in ascending order, bins are between adjacent values and between min_roh_length and value 1 and the last value and infinity
   realsfs:
     fold: 1 # Should only be set to 1, unless ancestral reference is given above
-    sfsboot: 100
+    sfsboot: 100 # Does nothing for now
   fst:
     whichFst: 1
     win_size: 10000
