--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,10 +6,12 @@ on:
       - master
     paths-ignore:
       - '**/*.md'
+      - 'docs'
   pull_request:
     branches_ignore: []
     paths-ignore:
       - '**/*.md'
+      - 'docs'
 
 jobs:
   formatting:
