--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,8 @@ nav:
   - About: about.md
 repo_url: https://www.github.com/zjnolen/angsd-snakemake-pipeline
 theme: material
-theme:
   icon:
-    repo: fontawesome/brands/github
+    repo: material/github
 plugins:
   - search
 extra:
