--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,11 +5,11 @@ nav:
   - Configuration: config.md
   - Tutorial: tutorial.md
   - About: about.md
-theme: material
-repo_url: https://www.github.com/zjnolen/angsd-snakemake-pipeline
 theme:
+  name: material
   icon:
-    repo: material/github
+    repo: simple/github
+repo_url: https://www.github.com/zjnolen/angsd-snakemake-pipeline
 plugins:
   - search
 extra:
