Make admonitions work in docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,3 +20,7 @@ plugins:
 extra:
   version:
     provider: mike
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
