--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,4 +23,5 @@ extra:
 markdown_extensions:
   - admonition
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      preserve_tabs: true
