Add light/dark themes to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,25 @@ theme:
       question: octicons/question-16
   features:
     - search.highlight
+  palette:
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/link
+        name: Switch to light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: black
+      accent: indigo
+      toggle:
+        icon: material/toggle-switch-off
+        name: Switch to system preference
 repo_url: https://github.com/zjnolen/angsd-snakemake-pipeline
 repo_name: zjnolen/angsd-snakemake-pipeline
 plugins:
