--- a/config/config.yaml
+++ b/config/config.yaml
@@ -35,7 +35,7 @@ analyses:
   mapping:
     historical_only_collapsed: true
     historical_collapsed_aligner: "aln"
-  # filtering
+  # sites file filters
   pileup-mappability: true
   repeatmasker:
     bed:
@@ -43,8 +43,8 @@ analyses:
     dfam_lib:
     build_lib: true
   extreme_depth: true
-  dataset_missing_data: 0.8
-  population_missing_data: 0.8
+  dataset_missing_data:
+  population_missing_data:
   # quality control
   qualimap: true
   damageprofiler: true
@@ -132,16 +132,18 @@ params:
     profile_modern: false
   angsd:
     gl_model: 2 # gl_model - 1=SAMtools, 2=GATK, 3=SOAPsnp, 4=SYK
-    maxdepth: 1000
-    missing_data_mindepthind: 1
-    extra: ""
-    extra_saf: ""
-    extra_beagle: ""
+    maxdepth: 1000 # for depth calc only
+    mindepthind: 1
+    minind_dataset: 0.75 # as a proportion of N
+    minind_pop: 0.75 # as a proportion of N
+    extra: "" # goes to all ANGSD runs
+    extra_saf: "" # goes to all -doSaf runs
+    extra_beagle: "" # goes to all -doGlf 2 runs
     domajorminor: 1 # Currently only compatible with values 1, 2, 4, 5
     domaf: 1
     snp_pval: "1e-6"
     min_maf: -1 # Set -1 to disable
-    mindepthind_heterozygosity: 3
+    mindepthind_heterozygosity: 1
   ngsld:
     max_kb_dist_est-ld: 4000
     rnd_sample_est-ld: 0.001
