--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -76,11 +76,12 @@ subsample_dp: 2
 
 subsample_by: "sitefilt" # three options: unfilt, mapqbaseq, sitefilt; sitefilt recommended (subsamples bams to `subsample_dp` within filtered regions)
 redo_depth_filts: false # has no effect when `subsample_by` == "sitefilt"
+drop_samples: ["mod1"] # These samples won't be included in the downsampled dataset
 
 subsample_analyses:
   estimate_ld: true
   ld_decay: true
-  pca_pcangsd: true
+  pca_pcangsd: false
   admix_ngsadmix: true
   relatedness:
     ngsrelate: true
@@ -102,7 +103,7 @@ subsample_analyses:
 
 filter_beds:
   example: "config/example-filt.bed"
-  badexample: "config/badexample-filt.bed"
+  #badexample: "config/badexample-filt.bed"
 
 only_filter_beds: false
 
