--- a/config/config.yaml
+++ b/config/config.yaml
@@ -76,6 +76,7 @@ subsample_dp:
 
 subsample_by: "sitefilt" # three options: unfilt, mapqbaseq, sitefilt; sitefilt recommended (subsamples bams to `subsample_dp` within filtered regions)
 redo_depth_filts: false # has no effect when `subsample_by` == "sitefilt"
+drop_samples: [] # These samples won't be included in the downsampled dataset
 
 subsample_analyses:
   estimate_ld: false
