--- a/environment.yaml
+++ b/environment.yaml
@@ -3,14 +3,7 @@ name: angsd-snakemake-pipeline
 channels:
   - conda-forge
   - bioconda
-  - defaults
 
 dependencies:
   # core packages for workflow
-  - snakemake-minimal =7.32.*
-  - python =3.11.*
-  - pandas =2.0.1
-  - mamba
-  - graphviz
-  - pygments
-  - pulp =2.7.*
+  - snakemake =7.32.*
