--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,5 +42,7 @@ extra:
 markdown_extensions:
   - admonition
   - pymdownx.details
+  - pymdownx.caret
+  - pymdownx.tilde
   - pymdownx.superfences:
       preserve_tabs: true
