Allow multiple target depths for depth subsampling

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -73,7 +73,7 @@ analyses:
 
 #==================== Downsampling Configuration ======================#
 
-subsample_dp:
+subsample_dp: []
 
 subsample_by: "sitefilt" # three options: unfilt, mapqbaseq, sitefilt; sitefilt recommended (subsamples bams to `subsample_dp` within filtered regions)
 redo_depth_filts: false # has no effect when `subsample_by` == "sitefilt"
