Remove pileup mappability from container testing
I am not really making a container for it as I probably will change how its done.

--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -36,7 +36,7 @@ analyses:
     historical_only_collapsed: false
     historical_collapsed_aligner: "aln"
   # sites file filters
-  pileup-mappability: true
+  pileup-mappability: false
   repeatmasker:
     bed:
     local_lib:
