Make pruning for NGSrelate optional

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -150,6 +150,8 @@ params:
     snp_pval: "1e-6"
     min_maf: -1 # Set -1 to disable
     mindepthind_heterozygosity: 1
+  ngsrelate:
+    prune: false
   ngsld:
     max_kb_dist_est-ld: 4000
     rnd_sample_est-ld: 0.001
