--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -151,6 +151,8 @@ params:
     snp_pval: "1e-6"
     min_maf: -1 # Set -1 to disable
     mindepthind_heterozygosity: 1
+  ngsrelate:
+    prune: true
   ngsld:
     max_kb_dist_est-ld: 200
     rnd_sample_est-ld: 0.001
