--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -36,7 +36,7 @@ analyses:
     historical_only_collapsed: false
     historical_collapsed_aligner: "aln"
   # sites file filters
-  pileup-mappability: false
+  pileup-mappability: true
   repeatmasker:
     bed:
     local_lib:
